Fix toggegroup contrast.

--- a/src/styles/components/_togglegroup.scss
+++ b/src/styles/components/_togglegroup.scss
@@ -8,7 +8,8 @@
     
     position: relative;
     display: inline-block;
-    background: var(--color-grey-700);
+    background: var(--color-grey-800);
+    border: solid 1px rgba(--color-border);
     border-radius: var(--height);
     @include font(overline-medium-semi);
 
@@ -23,7 +24,7 @@
         top: 0;
         left: 0;
         height: 100%;
-        background: var(--color-turquoise-700);
+        background: var(--color-turquoise-600);
         border-radius: var(--height);
         transition: transform 0.3s ease, width 0.3s ease;
         z-index: 1;
